--- a/gui/frontend.ui
+++ b/gui/frontend.ui
@@ -92,6 +92,8 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
+    <addaction name="actionPreferences_2"/>
+    <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuRules">
@@ -157,6 +159,11 @@
   <action name="actionSave">
    <property name="text">
     <string>Save all to Rulesfile</string>
+   </property>
+  </action>
+  <action name="actionPreferences_2">
+   <property name="text">
+    <string>Preferences</string>
    </property>
   </action>
  </widget>
